--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-send": "^4.1.0",
     "log4js": "^1.1.1",
     "moment": "^2.18.1",
+    "sequelize": "^3.30.4",
     "xtemplate": "^4.7.2",
     "xtpl": "^3.3.0"
   },
